# erc-2017

./: CMakeLists.txt  HowToBuild.md  Jenkinsfile  Readme.md
hello_world/: CMakeLists.txt
unit_tests/: CMakeLists.txt  test.cpp
